--- a/dlmsearch/views/default.html
+++ b/dlmsearch/views/default.html
@@ -4,6 +4,7 @@
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>{{ title }}</title>
+ <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
 {% block links %}{% endblock %}
 {% block styles %}{% endblock %}
 </head>
