--- a/dlmsearch/views/map.html
+++ b/dlmsearch/views/map.html
@@ -28,7 +28,7 @@
   L.tileLayer('https://{s}.wien.gv.at/basemap/geolandbasemap/normal/google3857/{z}/{y}/{x}.png', {
    minZoom: 1,
    maxZoom: 18,
-   attribution: '<a href="http://basemap.at" target="_blank">basemap.at</a>, <a href="http://creativecommons.org/licenses/by/3.0/at/deed.de" target="_blank">CC-BY 3.0</a>',
+   attribution: '<a href="https://basemap.at" target="_blank">basemap.at</a>, <a href="https://creativecommons.org/licenses/by/3.0/at/deed.de" target="_blank">CC-BY 3.0</a> | <a href="https://bev.gv.at" target="_blank">bev.gv.at</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC-BY 4.0</a>',
    tms: false,
    subdomains: ["maps", "maps1", "maps2", "maps3"],
   }).addTo(map);
