--- a/dlmsearch/views/map.html
+++ b/dlmsearch/views/map.html
@@ -1,10 +1,4 @@
-{% extends "default.html" %}
-
-{% block links %}
- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
- <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css">
- <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css">
-{% endblock %}
+{% extends "leaflet.html" %}
 
 {% block styles %}
  <style>
@@ -13,36 +7,6 @@
     height: 480px;
   }
  </style>
-{% endblock %}
-
-{% block scripts %}
- <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
- <script src="https://unpkg.com/leaflet.markercluster@1.3.0/dist/leaflet.markercluster.js"></script>
- <script>
- (function() {
-  var bounds = new L.LatLngBounds([{% for location in locations %}[{{ location.lat }}, {{ location.lon }}],{% endfor %}]);
-  var map = L.map('map', {
-   scrollWheelZoom: false
- }).setView([47.333, 13.333], 7);
-  if (bounds.length) map.fitBounds(bounds, {padding: [50, 50]});
-  L.tileLayer('https://{s}.wien.gv.at/basemap/geolandbasemap/normal/google3857/{z}/{y}/{x}.png', {
-   minZoom: 1,
-   maxZoom: 18,
-   attribution: '<a href="https://basemap.at" target="_blank">basemap.at</a>, <a href="https://creativecommons.org/licenses/by/3.0/at/deed.de" target="_blank">CC-BY 3.0</a> | <a href="https://bev.gv.at" target="_blank">bev.gv.at</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC-BY 4.0</a>',
-   tms: false,
-   subdomains: ["maps", "maps1", "maps2", "maps3"],
-  }).addTo(map);
-  var markers = L.markerClusterGroup();
-{% for location in locations %}
-  L.marker([{{ location.lat }}, {{ location.lon }}]).bindPopup("{{ location.name|escape }}{% if location.var_name %} ({{ location.var_name|escape }}){% endif %}").on('mouseover', function (e) {
-    this.openPopup();
-  }).on('mouseout', function (e) {
-    this.closePopup();
-  }).on('click', function (e) {}).addTo(markers);
-{% endfor %}
-  map.addLayer(markers);
-  })();
- </script>
 {% endblock %}
 
 {% block content %}
@@ -57,7 +21,7 @@
 {% for index, name in categories.items() %}
         <option value="{{ index }}"{% if category == index %} selected{% endif%}>{{ name }}</option>
 {% endfor %}
-      <select>
+      </select>
       <input type="submit" value="Search">
 {% if locations %}
       <span>Found {{ locations|count }} locations.</span>
@@ -83,13 +47,46 @@
       <tr>
         <td>{{ location.name|escape }}{% if location.var_name %} ({{ location.var_name|escape }}){% endif %}</td>
         <td>{{ get_category(location.category) }}</td>
-        <td>{{ '%.3F' % location.lat }}</td>
-        <td>{{ '%.3F' % location.lon }}</td>
+        <td>{{ '%.4f' % location.lat }}</td>
+        <td>{{ '%.4f' % location.lon }}</td>
       </tr>
 {% endfor %}
     </table>
   </div>
   <div class="w3-container">
-
   </div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+  <script>
+    (function() {
+      var bounds = new L.LatLngBounds([{% for location in locations %}[{{ location.lat }}, {{ location.lon }}],{% endfor %}]);
+      var map = L.map('map', {
+        scrollWheelZoom: false
+        }).setView([47.333, 13.333], 7);
+      if (bounds.length) {
+        map.fitBounds(bounds, {padding: [50, 50]});
+      }
+      L.tileLayer('https://{s}.wien.gv.at/basemap/geolandbasemap/normal/google3857/{z}/{y}/{x}.png', {
+        minZoom: 1,
+        maxZoom: 18,
+        attribution: '<a href="https://basemap.at" target="_blank">basemap.at</a>, <a href="https://creativecommons.org/licenses/by/3.0/at/deed.de" target="_blank">CC-BY 3.0</a> | <a href="https://bev.gv.at" target="_blank">bev.gv.at</a>, <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC-BY 4.0</a>',
+        tms: false,
+        subdomains: ["maps", "maps1", "maps2", "maps3"],
+      }).addTo(map);
+      var markers = L.markerClusterGroup();
+{% for location in locations %}
+      L.marker([{{ location.lat }}, {{ location.lon }}]).bindPopup(
+        `<div>{{ location.name|escape }}{% if location.var_name %} ({{ location.var_name|escape }}){% endif %}</div>
+         <div>Category: {{ get_category(location.category) }}</div>
+         <div><span title="Latitude">{{ '%.4f' % location.lat }}</span>, <span title="Longitude">{{ '%.4f' % location.lon }}</span></div>`).on('mouseover', function (e) {
+        this.openPopup();
+      }).on('mouseout', function (e) {
+        this.closePopup();
+      }).on('click', function (e) {}).addTo(markers);
+{% endfor %}
+      map.addLayer(markers);
+    })();
+  </script>
 {% endblock %}
