--- a/dlmsearch/views/default.html
+++ b/dlmsearch/views/default.html
@@ -4,12 +4,16 @@
  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>{{ title }}</title>
- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+ <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 {% block links %}{% endblock %}
 {% block styles %}{% endblock %}
 </head>
 <body>
 {% block content %}{% endblock %}
+  <div class="w3-container w3-small w3-text-grey w3-center">
+    dlmsearch version {{ version }}
+  </div>
 {% block scripts %}{% endblock %}
 </body>
 </html>
